test/samples/invalid/ambiguous_binding1.invalid.sol
/// #invariant let a := 1 in a > 0;
contract Foo {
}

